--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="index.html">
       <img src="img/rhlm logo.png" width="40" height="40" class="me-2 rounded-circle" alt="Logo RHLM">
-      Anuel AA – Divulgación
+      Anuel AA
     </a>
 
     <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
@@ -171,3 +171,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
